style fix: z-index configured

--- a/src/components/pages/agents/work Flow/workflow nav/workflow.nav.scss
+++ b/src/components/pages/agents/work Flow/workflow nav/workflow.nav.scss
@@ -8,7 +8,7 @@
 		right: 10px;
 		width: 220px;
 		background-color: themed("background");
-		z-index: 1000;
+		z-index: 500;
 		border-radius: 8px;
 		transition: all 0.3s;
 		-webkit-box-shadow: -8px 8px 14px -9px rgba(68, 68, 68, 0.6);
