--- a/src/components/side bar/mobile side bar/mobile nav/mobile.nav.scss
+++ b/src/components/side bar/mobile side bar/mobile nav/mobile.nav.scss
@@ -23,7 +23,7 @@
 			color: themed("icon");
 			cursor: pointer;
 			transition: all 0.2s;
-			z-index: 30000;
+			z-index: 600;
 		}
 
 		.mobile-side-bar-wrapper {
