--- a/src/components/side bar/mobile side bar/mobile.sidebar.scss
+++ b/src/components/side bar/mobile side bar/mobile.sidebar.scss
@@ -7,7 +7,7 @@
 		left: -110vw;
 		right: 110vw;
 		bottom: 0;
-		z-index: 1100;
+		z-index: 600;
 		background-color: themed("background");
 		transition: all 0.3s;
 		overflow-y: scroll;
